--- a/index.html
+++ b/index.html
@@ -33,121 +33,128 @@
             <h2 class="projects-section-header">These are some of my projects</h2>
             <div class="projects-grid">
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/lief-handmade/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/lief-handmade.png"
+                    alt="Lief Handmade"
                     />
-                    <p class=""></p>
+                    <p class="project-title">Lief Handmade</p>
                 </a>
 
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/macbook-webpage-clone/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/macbook-clone.png"
+                    alt="Macbook Pro Webpage Clone"
                     />
-                    <p class=""></p>
+                    <p class="project-title">Macbook Pro Webpage Clone</p>
                 </a>
 
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/magazine/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/magazine.png"
+                    alt="Magazine"
                     />
-                    <p class=""></p>
+                    <p class="project-title">Magazine</p>
                 </a>
 
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/pi-hole_project/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/tech-doc.png"
+                    alt="tech-documentation"
                     />
-                    <p class=""></p>
+                    <p class="project-title">Technical Documentation</p>
                 </a>
 
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/city-skyline/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/city-skyline.png"
+                    alt="City Skyline"
                     />
-                    <p class=""></p>
+                    <p class="project-title">City Skyline</p>
                 </a>
 
                 <a
-                class=""
-                href=""
+                class="project project-title"
+                href="https://kpkovilakam.github.io/flappy-penguin/"
                 target="_blank">
                     <img 
-                    class=""
-                    src=""
-                    alt=""
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/flappy-penguin.png"
+                    alt="Flappy Penguin"
                     />
-                    <p class=""></p>
-                </a>
-
-                <a
-                class=""
-                href=""
-                target="_blank">
-                    <img 
-                    class=""
-                    src=""
-                    alt=""
-                    />
-                    <p class=""></p>
-                </a>
-
-                <a
-                class=""
-                href=""
-                target="_blank">
-                    <img 
-                    class=""
-                    src=""
-                    alt=""
-                    />
-                    <p class=""></p>
-                </a>
-
-                <a
-                class=""
-                href=""
-                target="_blank">
-                    <img 
-                    class=""
-                    src=""
-                    alt=""
-                    />
-                    <p class=""></p>
+                    <p class="project-title">Flappy Penguin</p>
                 </a>
             </div>
             <a
-            class=""
-            href=""
+            class="btn btn-show-all"
+            href="https://github.com/kpkovilakam?tab=repositories"
             target="_blank">
-            Show all
+            Show all<i class="fas fa-chevron-right"></i>
             </a>
         </section>
+
         <!-- Contact section -->
+        <section id="contact" class="contact-section">
+            <div class="contact-section-header">
+                <h2>Let's work together...</h2>
+                <p>Keep in touch</p>
+            </div>
+            <div class="contact-links">
+                <a
+                class="btn contact-details"
+                href="https://www.facebook.com/krishnakprakash"
+                target="_blank">
+                <i class="fab fa-facebook-square"></i>Facebook</a>
+
+                <a
+                id="profile-link"
+                class="btn contact-details"
+                href="https://github.com/kpkovilakam"
+                target="_blank">
+                <i class="fab fa-github"></i>Github</a>
+
+                <a
+                class="btn contact-details"
+                href="https://twitter.com/kp_kovilakam"
+                target="_blank">
+                <i class="fab fa-twitter"></i>Twitter</a>
+
+                <a
+                class="btn contact-details"
+                href="#"
+                target="_blank">
+                <i class="fab fa-at"></i>Send a mail</a>
+
+                <a
+                class="btn contact-details"
+                href="tel:+918075607158"
+                target="_blank">
+                <i class="fab fa-mobile-alt"></i>Call me</a>
+            </div>
+        </section>
+
         <!-- Footer section -->
+        <footer>
+            <p></p>&copy; Krishnaprakash
+        </footer>
     </body>
 </html>
