Add media queries

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     </head>
     <body>
         <!-- Navigation bar -->
@@ -41,10 +42,14 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/lief-handmade.png"
                     alt="Lief Handmade"
                     />
-                    <p class="project-title">Lief Handmade</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Lief Handmade
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
 
-                <a
+                <a  
                 class="project project-title"
                 href="https://kpkovilakam.github.io/macbook-webpage-clone/"
                 target="_blank">
@@ -53,7 +58,11 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/macbook-clone.png"
                     alt="Macbook Pro Webpage Clone"
                     />
-                    <p class="project-title">Macbook Pro Webpage Clone</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        MacBook Pro Webpage Clone
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
 
                 <a
@@ -65,7 +74,11 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/magazine.png"
                     alt="Magazine"
                     />
-                    <p class="project-title">Magazine</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Magazine
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
 
                 <a
@@ -77,7 +90,11 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/tech-doc.png"
                     alt="tech-documentation"
                     />
-                    <p class="project-title">Technical Documentation</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Technical Documentation
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
 
                 <a
@@ -89,7 +106,11 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/city-skyline.png"
                     alt="City Skyline"
                     />
-                    <p class="project-title">City Skyline</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        City Skyline
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
 
                 <a
@@ -101,7 +122,11 @@
                     src="https://kpkovilakam.github.io/personal-portfolio/media/flappy-penguin.png"
                     alt="Flappy Penguin"
                     />
-                    <p class="project-title">Flappy Penguin</p>
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Flappy Penguin
+                        <span class="code">&#47;&gt;</span>
+                    </p>
                 </a>
             </div>
             <a
@@ -123,38 +148,39 @@
                 class="btn contact-details"
                 href="https://www.facebook.com/krishnakprakash"
                 target="_blank">
-                <i class="fab fa-facebook-square"></i>Facebook</a>
+                <i class="fab fa-facebook-square"></i> Facebook</a>
 
                 <a
                 id="profile-link"
                 class="btn contact-details"
                 href="https://github.com/kpkovilakam"
                 target="_blank">
-                <i class="fab fa-github"></i>Github</a>
+                <i class="fab fa-github"></i> Github</a>
 
                 <a
                 class="btn contact-details"
                 href="https://twitter.com/kp_kovilakam"
                 target="_blank">
-                <i class="fab fa-twitter"></i>Twitter</a>
+                <i class="fab fa-twitter"></i> Twitter</a>
 
                 <a
                 class="btn contact-details"
                 href="#"
                 target="_blank">
-                <i class="fab fa-at"></i>Send a mail</a>
+                <i class="fab fa-at"></i> Send a mail</a>
 
                 <a
                 class="btn contact-details"
                 href="tel:+918075607158"
                 target="_blank">
-                <i class="fab fa-mobile-alt"></i>Call me</a>
+                <i class="fab fa-mobile-alt"></i> Call me</a>
             </div>
         </section>
 
         <!-- Footer section -->
         <footer>
-            <p></p>&copy; Krishnaprakash
+            <p>*This portfolio is created based on freeCodeCamp curriculum.</p>
+            <p>&copy; Made with &#10084; Krishnaprakash</p>
         </footer>
     </body>
 </html>
