Add contact icons

--- a/index.html
+++ b/index.html
@@ -167,13 +167,13 @@
                 class="btn contact-details"
                 href="#"
                 target="_blank">
-                <i class="fab fa-at"></i> Send a mail</a>
+                <i class="fas fa-at"></i> Send a mail</a>
 
                 <a
                 class="btn contact-details"
                 href="tel:+918075607158"
                 target="_blank">
-                <i class="fab fa-mobile-alt"></i> Call me</a>
+                <i class="fas fa-mobile-alt"></i> Call me</a>
             </div>
         </section>
 
