--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                 <a
                 class="btn contact-details"
-                href="#"
+                href="mailto:krishnakprakash@gmail.com?"
                 target="_blank">
                 <i class="fas fa-at"></i> Send a mail</a>
 
