--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <!-- Welcome section -->
         <section id="welcome" class="welcome-section">
             <h1>Hey, I'm Krishnaprakash</h1>
-            <p>a web developer</p>
+            <p>a web designer & developer</p>
         </section>
 
         <!-- Project section -->
