Update new projects and information

--- a/index.html
+++ b/index.html
@@ -26,13 +26,61 @@
         <!-- Welcome section -->
         <section id="welcome" class="welcome-section">
             <h1>Hey, I'm Krishnaprakash</h1>
-            <p>a web designer & developer</p>
+            <p>a product designer & web developer</p>
         </section>
 
         <!-- Project section -->
         <section id="projects" class="projects-section">
             <h2 class="projects-section-header">These are some of my projects</h2>
             <div class="projects-grid">
+                <a
+                class="project project-title"
+                href="https://www.behance.net/gallery/230590249/tinkerWeb"
+                target="_blank">
+                    <img 
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/tinkerweb.png"
+                    alt="tinkerWeb"
+                    />
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        tinkerWeb
+                        <span class="code">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                <a
+                class="project project-title"
+                href="https://www.behance.net/gallery/209910517/Play-Around"
+                target="_blank">
+                    <img 
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/play-around.png"
+                    alt="Play Around"
+                    />
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        Play Around
+                        <span class="code">&#47;&gt;</span>
+                    </p>
+                </a>
+
+                 <a
+                class="project project-title"
+                href="https://www.behance.net/gallery/209909509/A4Alphabets"
+                target="_blank">
+                    <img 
+                    class="project-image"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/a4alphabets.png"
+                    alt="A4Alphabets"
+                    />
+                    <p class="project-title">
+                        <span class="code">&lt;</span>
+                        A4Alphabets
+                        <span class="code">&#47;&gt;</span>
+                    </p>
+                </a>
+                
                 <a
                 class="project project-title"
                 href="https://kpkovilakam.github.io/lief-handmade/"
@@ -146,9 +194,9 @@
             <div class="contact-links">
                 <a
                 class="btn contact-details"
-                href="https://www.facebook.com/krishnakprakash"
+                href="https://www.behance.net/krishnaprakash1"
                 target="_blank">
-                <i class="fab fa-facebook-square"></i> Facebook</a>
+                <i class="fab fa-behance"></i> Behance</a>
 
                 <a
                 id="profile-link"
@@ -167,19 +215,19 @@
                 class="btn contact-details"
                 href="mailto:krishnakprakash@gmail.com?"
                 target="_blank">
-                <i class="fas fa-at"></i> Send a mail</a>
+                <i class="fas fa-at"></i> Email</a>
 
                 <a
                 class="btn contact-details"
                 href="tel:+918075607158"
                 target="_blank">
-                <i class="fas fa-mobile-alt"></i> Call me</a>
+                <i class="fas fa-mobile-alt"></i> Phone</a>
             </div>
         </section>
 
         <!-- Footer section -->
         <footer>
-            <p>&copy; Made with &#10084; Krishnaprakash</p>
+            <p>&copy; Designed with HTML & CSS by KP</p>
         </footer>
     </body>
 </html>
