Update tinkerweb image

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 target="_blank">
                     <img 
                     class="project-image"
-                    src="https://kpkovilakam.github.io/personal-portfolio/media/tinkerweb.png"
+                    src="https://kpkovilakam.github.io/personal-portfolio/media/tinkerweb.jpg"
                     alt="tinkerWeb"
                     />
                     <p class="project-title">
