--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
+        <link rel="icon" href="https://kpkovilakam.github.io/personal-portfolio/media/favicon.png" type="image/png">
+
     </head>
     <body>
         <!-- Navigation bar -->
